--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,18 @@ services:
 before_install:
   - docker build -t sugawarayushin/docker-react -f Dockerfile.dev .
 
-
 script:
   - docker run -e CI=true sugawarayushin/docker-react npm run test
 
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-ap-northeast-1-104886128134"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
 
